# pwdgen-t

./: LICENSE.txt  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.svelte  MainPage.svelte  app.css
src-tauri/: Cargo.toml
src-tauri/app/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/app/capabilities/: default.json
src-tauri/app/src/: commands.rs  entities.rs  factory.rs  keystream_provider.rs  lib.rs
src-tauri/app/src/commands/: backup.rs  calculate_password.rs  create_acct_data.rs  delete_acct_data.rs  init_migrate.rs  read_acct_data.rs  read_all_acct_data.rs  restore.rs  update_acct_data.rs
src-tauri/app/src/entities/: acct_data.rs
src-tauri/migration/: Cargo.toml
src-tauri/migration/src/: lib.rs  m20251210_000001_create_table.rs
src/models/: read_acct_data_result.ts  read_all_acct_data_result.ts
src/pages/: AddAcctData.svelte  EditAcctData.svelte  Home.svelte  Init.svelte  ReadAcctData.svelte  Settings.svelte
src/route/: MemoryRouter.svelte  Route.svelte  memory-router.ts  types.ts  useRouter.ts
