[package]
name = "app"
version = "0.1.0"
description = "A Password Generator"
authors = ["tsctsc6"]
license = ""
repository = ""
edition = "2024"
rust-version = "1.91.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-single-instance = { version = "2" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
sea-orm = { version = "2.0.0-rc", features = ["sqlx-sqlite", "runtime-tokio", "macros" ] }
migration = { path = "../migration" }
thiserror = "2"
chrono = "0"
chacha20 = "0"
sha2 = "0"
cipher = "0"
